--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-scripts": "5.0.0",
     "redux": "^4.1.2",
     "redux-persist": "^6.0.0",
+    "uniqid": "^5.4.0",
     "web-vitals": "^2.1.0"
   },
   "scripts": {
